--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: ^5.4.1
+  awesome_dialog: ^3.2.1
   firebase_core: ^3.4.0
   firebase_database: ^11.1.1
-  http: ^1.2.2
+  geolocator: ^9.0.2
+  location: ^4.4.0
+  flutter_google_maps_webservices: ^1.1.1
+  google_maps_flutter: ^2.2.3
+  http: ^1.3.0
+  flutter_polyline_points: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,9 +68,22 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/finish.png
+    - assets/start.png
+    - assets/prize.png
+    - assets/marathon.png
+    - assets/images/ranks/a.png
+    - assets/images/ranks/b.png
+    - assets/images/ranks/d.png
+    - assets/images/ranks/g.png
+    - assets/images/ranks/i.png
+    - assets/images/ranks/ir.png
+    - assets/images/ranks/p.png
+    - assets/images/ranks/r.png
+    - assets/images/ranks/s.png
+    - assets/logo.png
+    - assets/mikey.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
