--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,37 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"authelp-59c85","appId":"1:79609830834:android:72632c6f2bdd836d9a18ab","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"authelp-59c85","configurations":{"android":"1:79609830834:android:72632c6f2bdd836d9a18ab","ios":"1:79609830834:ios:76c85461263fdc409a18ab","web":"1:79609830834:web:aa61f0f10f2a42eb9a18ab"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "authelp-59c85",
+          "appId": "1:79609830834:android:72632c6f2bdd836d9a18ab",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "authelp-59c85",
+          "configurations": {
+            "android": "1:79609830834:android:72632c6f2bdd836d9a18ab",
+            "ios": "1:79609830834:ios:76c85461263fdc409a18ab",
+            "web": "1:79609830834:web:aa61f0f10f2a42eb9a18ab"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
