--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,13 @@ dependencies:
   google_maps_flutter: ^2.2.3
   http: ^1.3.0
   flutter_polyline_points: ^2.1.0
-
+  flutter_email_sender: ^6.0.3
+  pdf: ^3.11.2
+  printing: ^5.10.1
+  path_provider: ^2.1.5
+  html: ^0.15.5
+  universal_html: ^2.2.4
+  intl: ^0.20.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -96,7 +102,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Helvetica
+      fonts:
+          - asset: assets/fonts/helvetica_regular.otf
+          - asset: assets/fonts/helvetica_bold.otf
+            weight: 700
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
