--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,14 @@ dependencies:
   http: ^1.3.0
   flutter_polyline_points: ^2.1.0
   flutter_email_sender: ^6.0.3
+  firebase_storage: ^12.4.4
   pdf: ^3.11.2
   printing: ^5.10.1
   path_provider: ^2.1.5
   html: ^0.15.5
   universal_html: ^2.2.4
   intl: ^0.20.2
+  image_picker: ^1.1.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
